--- a/Mission4Assignment/wwwroot/index.html
+++ b/Mission4Assignment/wwwroot/index.html
@@ -47,8 +47,7 @@
         <label>INTEX:</label>
         <input id="intex" /><br />
 
-        <label>Final Grade:</label>
-        <h1 id="finalGrade"></h1>
+        <label id="finalGrade"></label>
         <br />
 
         <input id="btnSend" type="button" value="Submit" /><br />
